security turned off

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,8 +4,8 @@ spring:
   application:
     name: registration-service
 security:
-    user:
-      password: ${eureka.password}
+  basic:
+    enabled: false
 eureka:
   instance:
     hostname: localhost
